# juniper_jam

./: .gitignore  CMakeLists.txt  save.save  save_test.save
resources/: back.xcf  blade.xcf  edge.xcf  enemy.xcf  engine.xcf  farm.xcf  unit.xcf  wall.xcf
src/: ant_path.cpp  entity.hpp  game.cpp  game.hpp  game_loop.cpp  images.cpp  main.cpp  menu.cpp  path.cpp  path.hpp  spatial_hashmap.cpp  spatial_hashmap.hpp
